# Uplink-Deprecated

./: .env  .gitignore  .prettierignore  .prettierrc  .scss-lint.yml  CONTRIBUTING.md  Cargo.toml  Config.toml  LICENSE.md  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  SGBL.toml  build.rs  commit.ps1  commit.sh  index.html  tailwind.config.js
.cache1/: .id
.circleci/: config.yml
.fleet/: run.json
.github/workflows/: add-conflicts-label.yml  add-label.yml  backlog-issues.yml  ci-make-dmg.yml  ci-make-windows.yml  comment-PR-dmg.yml  draft-label.yml  fix-typos.yml  fix-typos2.yml  link-issue.yml  lint-PR-title.yml  main.yml  main2.yml  move-tickets.yml  rebase.yml  remove-labels.yml  rust-clippy.yml  security.yml  test.yml  test2.yml  ui-appium-tests.yml
.github/workflows/donotrun/: main.yml
appium-tests/: README.md  package.json
appium-tests/config/: wdio.mac.app.conf.ts  wdio.mac.ci.conf.ts  wdio.shared.conf.ts  wdio.shared.local.appium.conf.ts
appium-tests/scripts/: run_appium_macos_server.sh
appium-tests/tests/helpers/: commands.ts
appium-tests/tests/screenobjects/: CreateAccountScreen.ts  CreatePinScreen.ts  EnterPinScreen.ts  FilesScreen.ts  PinDesktopScreen.ts  UplinkMainScreen.ts
appium-tests/tests/specs/: app.satellite.pin.spec.ts  create-account-screen.spec.ts  enter-pin-screen.spec.ts  files-screen.spec.ts
assets/linux/: im.satellite.warpgui.desktop  im.satellite.warpgui.metainfo.xml
desktop/: .cache_id  .id  .index_id  .keystore  .request_queue  Config.toml
desktop/logs/: warp-gui.log.2022-11-21-13  warp-gui.log.2022-11-21-14  warp-gui.log.2022-11-21-15  warp-gui.log.2022-11-21-16  warp-gui.log.2022-11-21-17  warp-gui.log.2022-11-21-18  warp-gui.log.2022-11-21-19  warp-gui.log.2022-11-21-20  warp-gui.log.2022-11-21-21  warp-gui.log.2022-11-21-22  warp-gui.log.2022-11-21-23  warp-gui.log.2022-11-22-00  warp-gui.log.2022-11-22-01  warp-gui.log.2022-11-22-02  warp-gui.log.2022-11-22-03  warp-gui.log.2022-11-22-04  warp-gui.log.2022-11-22-05  warp-gui.log.2022-11-22-06  warp-gui.log.2022-11-22-08  warp-gui.log.2022-11-22-09  warp-gui.log.2022-11-22-10  warp-gui.log.2022-11-22-11  warp-gui.log.2022-11-22-12  warp-gui.log.2022-11-22-13  warp-gui.log.2022-11-22-14  warp-gui.log.2022-11-22-15  warp-gui.log.2022-11-22-16  warp-gui.log.2022-11-22-17
dioxus-heroicons-local/: Cargo.toml  Changes.md  README.md
dioxus-heroicons-local/src/: outline.rs  solid.rs
dioxus-toast-local/: Cargo.toml  Dioxus.toml  README.md
dioxus-toast-local/examples/: hello.rs
dioxus-toast-local/src/: lib.rs  style.rs
dioxus-toast-local/src/assets/: toast.css
dioxus-toast-local/website/: .gitignore  Cargo.toml  Dioxus.toml
dioxus-toast-local/website/src/: main.rs
docs/: BUNDLING_FOR_MAC.md  CHECKLIST.md  new-dev.md
extension-example/: Cargo.toml
extension-example/src/: extension.rs  lib.rs
extensions/: Cargo.toml  Cargo.toml.example  lib.rs
extensions/api/: Cargo.toml  lib.rs
extensions/extension-example/: Cargo.toml
extensions/extension-example/src/: lib.rs
extensions/native/audio-factory/: Cargo.toml
extensions/native/audio-factory/src/: lib.rs  styles.scss
extensions/native/emoji/: mod.rs
extensions/native/emoji-selector/: Cargo.toml
extensions/native/emoji-selector/src/: emojis.toml  lib.rs
extensions/native/incognito-typing/: Cargo.toml
extensions/native/incognito-typing/src/: lib.rs
extra/: entitlements.plist
extra/assets/style/: base-min.css  fonts.css  forms-min.css  grids-min.css  styles.css  tailwind.css
i18n/en/: uplink.ftl
src/: .styles.css  build.rs  main.rs  tips.toml
src/components/: mod.rs  router.rs  styles.scss
src/components/global/: error.rs  friends.rs  mod.rs
src/components/main/: mod.rs  styles.scss
src/components/media/: media.js  mod.rs  responsive.js  styles.scss
src/extensions/: hello_extensions.rs  mod.rs  stickers.rs
src/extensions/native/audio-factory/: Cargo.toml
src/extensions/native/audio-factory/src/: lib.rs
src/iui_kit/: mod.rs  textarea.rs
src/iutils/: get_meta.rs  mod.rs
src/language/: en_US.ftl  en_us.rs  mod.rs
src/router/: mod.rs
src/state/: Cargo.toml  mod.rs  mutations.rs
src/state/src/: lib.rs
src/themes/: mod.rs
src/ui_kit/: Cargo.toml
src/ui_kit/src/: README.md  lib.rs
src/ui_kit/src/activity_indicator/: mod.rs
src/ui_kit/src/button/: mod.rs  styles.scss
src/ui_kit/src/context_menu/: context.js  mod.rs  styles.scss
src/ui_kit/src/extension_placeholder/: styles.scss
src/ui_kit/src/file/: hide_edit_name.js  mod.rs  show_edit_name.js  styles.scss
src/ui_kit/src/folder/: file_leave_folder.js  file_over_folder.js  hide_edit_name.js  mod.rs  show_edit_name.js  styles.scss
src/ui_kit/src/icon_button/: mod.rs  styles.scss
src/ui_kit/src/icon_input/: mod.rs  styles.scss
src/ui_kit/src/input/: mod.rs  styles.scss
src/ui_kit/src/input_add_friend/: mod.rs  styles.scss
src/ui_kit/src/loader/: styles.scss
src/ui_kit/src/new_folder/: mod.rs  new_folder.js
src/ui_kit/src/outside/: mod.rs  outside.js
src/ui_kit/src/photo_picker/: mod.rs  styles.scss
src/ui_kit/src/pin/: mod.rs
src/ui_kit/src/popup/: mod.rs  styles.scss
src/ui_kit/src/profile_picture/: styles.scss
src/ui_kit/src/resizable/: mod.rs  resizable.js  styles.scss
src/ui_kit/src/select/: mod.rs  styles.scss
src/ui_kit/src/skeletal_chats/: mod.rs  styles.scss
src/ui_kit/src/skeletons/: inline.rs  pfp.rs  styles.scss
src/ui_kit/src/switch/: styles.scss
src/ui_kit/src/textarea/: mod.rs  styles.scss
src/ui_kit/src/tooltip/: styles.scss
src/ui_kit/src/typing_indicator/: mod.rs  styles.scss
src/ui_kit/src/utils/: config.rs  mod.rs  notifications.rs  sounds.rs
src/utils/: Cargo.toml  config.rs  get_meta.rs  mod.rs  notifications.rs  sounds.rs
src/utils/src/: extensions.rs  files_functions.rs  lang.rs  lib.rs  media.rs  notifications.rs  sounds.rs
src/utils_internal/: mod.rs
static/css/: app.css
test/: CHECKLIST.md
test/physical/: launch_physical_test.sh
ui_kit/: Cargo.toml
ui_kit/src/: lib.rs
utils/src/: lib.rs  notifications.rs
(+223 files in other folders)
