[package]
name = "warp_gui"
version = "0.1.0"
authors = ["everyone@satellite.im"]
description = "GUI implementation of the Warp protocol."
readme = "README.md"
repository = "https://github.com/Satellite-im/WarpGUI"
license = "Creative Commons Attribution-NonCommercial 1.0"
categories = ["gui", "filesystem", "multimedia", "cryptography::cryptocurrencies"]
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fdlimit = "0.2"

tracing = { default-features = false, features = ["log"], version = "0.1" }
tracing-futures = { default-features = false, features = [
    "std-future",
    "std",
    "futures-03",
], version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

dioxus = { version = "0.2.4", features = ["desktop", "router", "fermi"] }
dioxus-html = "0.2.1"
sir = { version = "0.2.2", features = ["dioxus"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
anyhow = "1.0"
once_cell = "1.13"
dioxus-heroicons = "0.1.4"
dioxus-toast = { version = "0.1.5" }
clap = { version = "3.2", features = ["derive"] }
toml = "0.5.9"
tokio = { version = "1", features = ["full"] }
chrono-humanize = "0.2.2"

warp = { git = "https://github.com/Satellite-im/Warp" }
warp-mp-ipfs = { git = "https://github.com/Satellite-im/Warp" }
warp-rg-ipfs = { git = "https://github.com/Satellite-im/Warp" }
arboard = "3.1.0"


[build-dependencies]
glob = "0.3.0"
rsass = "0.26.0"

[package.metadata.bundle]
name = "WarpGUI"
identifier = "im.satellite.warpgui"
version = "0.1.0"
copyright = "Copyright (c) Satellite.IM Inc."
categories = ["gui", "filesystem", "multimedia", "cryptography::cryptocurrencies"]
short_description = "GUI implementation of the Warp protocol."
long_description = ""
