[package]
name = "uplink"
version = "0.0.0-pre"
authors = ["everyone@satellite.im"]
description = "GUI implementation of the Warp protocol."
readme = "README.md"
repository = "https://github.com/Satellite-im/Uplink"
license = "Creative Commons Attribution-NonCommercial 1.0"
categories = ["gui", "filesystem", "multimedia", "cryptography::cryptocurrencies"]
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fdlimit = "0.2"
linkify = "0.9.0"
open = "3.0.3"
pulldown-cmark = "0.9.2"
tracing = { default-features = false, features = ["log"], version = "0.1" }
tracing-futures = { default-features = false, features = [
    "std-future",
    "std",
    "futures-03",
], version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

dioxus = { version = "0.2.4", features = ["desktop", "router", "fermi"] }
dioxus-html = "0.2.1"
notify-rust = "4.5.10"
sir = { version = "0.2.2", features = ["dioxus"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
error-chain = "0.12.4"
select = "0.5.0"
reqwest = "0.11.12"
anyhow = "1.0"
once_cell = "1.13"
dioxus-heroicons = "0.1.4"
dioxus-toast = { version = "0.1.5" }
clap = { version = "3.2", features = ["derive"] }
toml = "0.5.9"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.22"
chrono-humanize = "0.2.2"
futures = "0.3"
dirs = "4.0.0"
rodio = "0.16.0"
libloading = "0.7.3"
soloud = "1.0.2"
rfd = {version = "0.10.0", default-features = false, features = ["xdg-portal"] }
image-base64 = "0.1.0"

warp = { git = "https://github.com/Satellite-im/Warp", rev = "bf09de21042ca2c90575aaa03409070c612dfdb0"}
warp-mp-ipfs = { git = "https://github.com/Satellite-im/Warp", rev = "bf09de21042ca2c90575aaa03409070c612dfdb0" }
warp-rg-ipfs = { git = "https://github.com/Satellite-im/Warp", rev = "bf09de21042ca2c90575aaa03409070c612dfdb0" }
arboard = "3.1.0"


[build-dependencies]
glob = "0.3.0"
rsass = "0.26.0"

[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1

[package.metadata.bundle]
name = "uplink"
identifier = "im.satellite.uplink"
version = "0.0.0-pre"
copyright = "Copyright (c) Satellite.IM Inc."
categories = ["gui", "filesystem", "multimedia", "cryptography::cryptocurrencies"]
short_description = "GUI implementation of the Warp protocol."
long_description = ""

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
