[package]
name = "uplink"
version = "0.0.0-pre"
authors = ["everyone@satellite.im"]
description = "GUI implementation of the Warp protocol."
readme = "README.md"
repository = "https://github.com/Satellite-im/Uplink"
license = "Creative Commons Attribution-NonCommercial 1.0"
categories = ["gui", "filesystem", "multimedia", "cryptography::cryptocurrencies"]
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluent = "0.16.0"
unic-langid = "0.9.1"
fdlimit = "0.2"
linkify = "0.9.0"
open = "3.0.3"
pulldown-cmark = "0.9.2"
regex = "1.6.0"
log = "0.4.17"
tracing = { default-features = false, features = ["log"], version = "0.1" }
tracing-futures = { default-features = false, features = [
    "std-future",
    "std",
    "futures-03",
], version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

dioxus = { version = "0.2.4", features = ["desktop", "router", "fermi"] }
dioxus-heroicons = { git="https://github.com/Satellite-im/dioxus-heroicons" }
dioxus-toast =  { git = "https://github.com/sdwoodbury/dioxus-toast"}
dioxus-html = "0.2.1"
notify-rust = "=4.5.10"
sir = { version = "0.2.2", features = ["dioxus"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
error-chain = "0.12.4"
select = "0.5.0"
reqwest = "0.11.12"
anyhow = "1.0"
once_cell = "1.13"
opener = "0.5.0"
clap = { version = "3.2", features = ["derive"] }
toml = "0.5.9"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.22"
futures = "0.3"
dirs = "4.0.0"
rodio = "0.16.0"
libloading = "0.7.3"
soloud = "1.0.2"
rfd = {version = "0.10.0", default-features = false, features = ["xdg-portal"] }
base64 = "0.13.1"
mime = "0.3.16"
image = "0.24.5"
ui_kit = { path = "src/ui_kit" }
utils = { path = "src/utils" }
state = { path = "src/state" }

warp = { git = "https://github.com/Satellite-im/Warp", rev = "45d1034c5b26ad1c76e7be4aec5113cba09a2f1f"}
warp-mp-ipfs = { git = "https://github.com/Satellite-im/Warp", rev = "45d1034c5b26ad1c76e7be4aec5113cba09a2f1f" }
warp-rg-ipfs = { git = "https://github.com/Satellite-im/Warp", rev = "45d1034c5b26ad1c76e7be4aec5113cba09a2f1f" }
warp-fs-ipfs = { git = "https://github.com/Satellite-im/Warp", rev = "45d1034c5b26ad1c76e7be4aec5113cba09a2f1f" }
arboard = "3.1.0"
fs2 = "0.4.3"
humansize = "2.0.0"

audio-factory = { path = "extensions/native/audio-factory" }
emoji-selector = { path = "extensions/native/emoji-selector" }
incognito-typing = { path = "extensions/native/incognito-typing" }

[build-dependencies]
glob = "0.3.0"
rsass = "0.26.0"

[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1

[package.metadata.bundle]
name = "uplink"
identifier = "im.satellite.uplink"
version = "0.0.0-pre"
copyright = "Copyright (c) Satellite.IM Inc."
categories = ["gui", "filesystem", "multimedia", "cryptography::cryptocurrencies"]
short_description = "GUI implementation of the Warp protocol."
long_description = ""

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"


[workspace]
members = [
    "extensions/native/audio-factory",
    "extensions/native/incognito-typing",
    "src/ui_kit",
    "src/utils",
    "src/state"
]
