[package]
name = "dioxus-toast"
version = "0.1.5"
authors = ["YuKun Liu <mrxzx.info@gmail.com>"]
repository = "https://github.com/mrxiaozhuox/dioxus-toast"
license = "MIT"
description = "Add toast support in your dioxus project"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
#default = ["dioxus-desktop"]

desktop = ["tokio", "dioxus-desktop"]

web = ["gloo-timers", "dioxus-web"]

[dependencies]
chrono = { version = "0.4.19", features = ["wasmbind"] }
dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "d734dc5b460d3a7007413cb494e139e7b08cf7b3"  }
dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus", rev = "d734dc5b460d3a7007413cb494e139e7b08cf7b3", optional = true  }
dioxus-web = { git = "https://github.com/DioxusLabs/dioxus", rev = "d734dc5b460d3a7007413cb494e139e7b08cf7b3", optional = true  }
fermi = { git = "https://github.com/DioxusLabs/dioxus", rev = "d734dc5b460d3a7007413cb494e139e7b08cf7b3"  }
tokio = { version = "1.17.0", features = ["time"], optional = true }
gloo-timers = { version = "0.2.3", features = ["futures"], optional = true }