[package]
name = "extensions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7.3"
dioxus = { git = "https://github.com/DioxusLabs/dioxus/" }
dioxus-html = { git = "https://github.com/DioxusLabs/dioxus/" }
sir = { version = "0.2.2", features = ["dioxus"] }

[lib]
name = "mylib"
crate_type = ["dylib"]