[package]
name = "hello-extension"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7.3"
dioxus = { version = "0.2.4", features = ["desktop"]}
utils = { path = "../../src/utils" }

[lib]
crate_type = ["dylib"]

[workspace]