[package]
name = "state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["desktop", "router", "fermi"] }
chrono = "0.4.22"
utils = { path = "../utils" }
log = "0.4.17"
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["serde", "v4"] }

warp = { git = "https://github.com/Satellite-im/Warp", branch = "warp/sync"}
