[package]
name = "ui_kit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus/" }
dioxus-html = { git = "https://github.com/DioxusLabs/dioxus/" }
dioxus-heroicons = "0.1.4"
sir = { version = "0.2.2", features = ["dioxus"] }
tokio = { version = "1", features = ["full"] }
rfd = {version = "0.10.0", default-features = false, features = ["xdg-portal"] }
base64 = "0.13.1"
mime = "0.3.16"
regex = "1.6.0"
utils = { path = "../utils" }
log = "0.4.17"

warp = { git = "https://github.com/Satellite-im/Warp", rev = "335313d98faf58f753971019183d3137a46cb3fb"}
