[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soloud = "1.0.2"
notify-rust = "4.5.10"
warp = { git = "https://github.com/Satellite-im/Warp", rev = "e12cdd2c589286714142a7d892ab5b225ff41fc3"}
dioxus = { version = "0.2.4", features = ["desktop", "router", "fermi"] }
libloading = "0.7.3"
once_cell = "1.13"
dirs = "4.0.0"
clap = { version = "3.2", features = ["derive"] }
anyhow = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.1"
objc = "0.2.7"