[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soloud = "1.0.2"
notify-rust = "=4.5.10"
warp = { git = "https://github.com/Satellite-im/Warp", rev = "cc6a5093b23efef04cff4e7e331260837a328625"}
dioxus = { version = "0.2.4", features = ["desktop", "router", "fermi"] }
libloading = "0.7.3"
once_cell = "1.13"
dirs = "4.0.0"
clap = { version = "3.2", features = ["derive"] }
anyhow = "1.0"
base64 = "0.13.1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
image = "0.24.5"
futures = "0.3"
mime = "0.3.16"
log = "0.4.17"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.1"
objc = "0.2.7"