[package]
name = "audio-factory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus/" }
dioxus-heroicons = { git = "https://github.com/Satellite-im/dioxus-heroicons" }
ui_kit = { path = "../../../src/ui_kit" }
utils = { path = "../../../src/utils" }
sir = "0.2.2"
fs2 = "0.4.3"
humansize = "2.0.0"
# gstreamer = "0.19.2"

#[lib]
#name = "audiofactory"
#crate_type = ["dylib"]