[package]
name = "incognito-typing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["desktop", "fermi"] }
dioxus-heroicons = { git="https://github.com/Satellite-im/dioxus-heroicons" }
ui_kit = { path = "../../../src/ui_kit" }
utils = { path = "../../../src/utils" }
state = { path = "../../../src/state" }
