[package]
name = "audio-factory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["desktop", "router", "fermi"] }
ui_kit = { path = "../../../ui_kit" }
dioxus-heroicons = "0.1.4"
sir = "0.2.2"
fs2 = "0.4.3"
humansize = "2.0.0"